# labwc-tweaks-gtk

./: NLS.md  README.md  environment.c  main.c  meson.build  meson_options.txt  stack-appearance.c  stack-behaviour.c  stack-behaviour.h  stack-lang.c  stack-mouse.c  state.h  theme.c  update.c
data/: labwc-tweaks-gtk.desktop  labwc-tweaks-gtk.desktop.in  meson.build
po/: LINGUAS  POTFILES.in  ar.po  de.po  es.po  fr.po  it.po  ja.po  labwc-tweaks-gtk.pot  meson.build  nb_NO.po  pl.po  ru.po  ta.po
tests/: t1000-add-xpath-node.c  t1001-nodenames.c
